# firecracker

./: .gitpod.Dockerfile  test
.buildkite/: buildctr.sh  pipeline.sh
src/devices/src/virtio/: persist.rs  queue.rs
src/devices/src/virtio/net/: device.rs
src/devices/src/virtio/vsock/: device.rs  epoll_handler.rs
src/devices/src/virtio/vsock/unix/: muxer.rs
src/firecracker/: Cargo.toml
src/gdb_server/: Cargo.toml
src/gdb_server/src/: lib.rs
src/kernel/src/loader/: mod.rs
src/logger/src/: metrics.rs
src/memory_model/src/: mmap.rs
src/virtio_gen/src/: virtio_net.rs
src/vmm/: Cargo.toml
src/vmm/src/: builder.rs  lib.rs
tests/: conftest.py
tests/framework/: scheduler.py
tests/host_tools/: cargo_build.py
tests/integration_tests/functional/: test_api.py  test_cmd_line_start.py  test_cpu_features.py  test_drives.py  test_error_code.py  test_logging.py  test_metrics.py  test_mmds.py  test_net_config_space.py  test_rtc.py  test_serial_io.py  test_shut_down.py  test_signals.py
tests/integration_tests/security/: test_jail.py  test_sec_audit.py  test_seccomp.py
tests/integration_tests/style/: test_gitlint.py  test_licenses.py  test_markdown.py  test_python.py  test_rust.py  test_swagger.py
tools/buildctr/: Dockerfile
tools/devctr/: Dockerfile.x86_64  pyproject.toml
